k8s/overlays/test/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-server
spec:
    template:
        spec:
            containers:
                - name: auth-server
                  env:
                      - name: REDIS_HOST
                        value: redis.test
