k8s/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-server
                            port:
                                number: 80
