k8s/overlays/test/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: integration-tests
spec:
    replicas: 1
    selector:
        matchLabels:
            app: integration-tests
    template:
        metadata:
            labels:
                app: integration-tests
        spec:
            containers:
                - name: integration-tests
                  image: auth-server
                  command: ['npm', 'run', 'test-int']
                  env:
                      - name: APP_URL
                        value: http://auth-server-service.test
